--- a/package.json
+++ b/package.json
@@ -4,10 +4,15 @@
     "ol": "6.5.0"
   },
   "devDependencies": {
-    "parcel": "^2.0.0-beta.1"
+    "css-loader": "^5.1.2",
+    "html-webpack-plugin": "^5.3.1",
+    "parcel": "^2.0.0-beta.1",
+    "style-loader": "^2.0.0",
+    "webpack": "^5.25.1",
+    "webpack-cli": "^4.5.0",
+    "webpack-dev-server": "^3.11.2"
   },
   "scripts": {
-    "start": "parcel index.html",
-    "build": "parcel build --public-url . index.html"
+    "start": "npx webpack serve"
   }
 }
