--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "devDependencies": {
     "css-loader": "^5.1.2",
     "html-webpack-plugin": "^5.3.1",
+    "jshint": "^2.12.0",
     "parcel": "^2.0.0-beta.1",
     "style-loader": "^2.0.0",
     "webpack": "^5.25.1",
