--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "jshint": "^2.12.0",
     "parcel": "^2.0.0-beta.1",
     "style-loader": "^2.0.0",
+    "svg-url-loader": "^7.1.1",
     "webpack": "^5.25.1",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2"
